--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 						<td>URL:<a href="android-ui-utils/asset-studio/dist/">https://nnn1590.github.io/android-ui-utils/asset-studio/dist/</a></td>
 					</tr>
 					<tr>
-						<td>nnn1590.lv9.org</td>
-						<td>メイン。</td>
-						<td>URL:<a href="http://nnn1590.lv9.org">http://nnn1590.lv9.org</a></td>
+						<td>nnn1590.orz.hm(nnn1590.ml)</td>
+						<td>メイン。たまに停止してるかも</td>
+						<td>URL:<a href="http://nnn1590.orz.hm">http://nnn1590.orz.hm (DDNS)</a><a href="http://nnn1590.ml">http://nnn1590.ml</a></td>
 					</tr>
 				</tbody>
 			</table>
