--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<tr>
 						<td>nnn1590.orz.hm(nnn1590.ml)</td>
 						<td>メイン。たまに停止してるかも</td>
-						<td>URL:<a href="http://nnn1590.orz.hm">http://nnn1590.orz.hm (DDNS)</a><a href="http://nnn1590.ml">http://nnn1590.ml</a></td>
+						<td>URL:<a href="http://nnn1590.orz.hm">http://nnn1590.orz.hm (DDNS)</a> | <a href="http://nnn1590.ml">http://nnn1590.ml</a></td>
 					</tr>
 				</tbody>
 			</table>
