--- a/dosattackmeasures.html
+++ b/dosattackmeasures.html
@@ -12,7 +12,7 @@
 	<p>1分間に35回以上のアクセスがあった時、またはこのページへ直接アクセスした時にこのページが表示されます。<br>
 	(画像やCSS、JavaScriptを除く)</p>
 	<p>Q: どうすればいいですか？<br>
-	A: 30秒待ってください。直接アクセスした場合は、<a href="/">ホームページ</a>に戻ったり他のページへアクセスしてください。(またはブラウザを終了してください。)</p>
+	A: 30秒待ってください。直接アクセスした場合は、<a href="https://nnn1590.orz.hm">ホームページ</a>に戻ったり他のページへアクセスしてください。(またはブラウザを終了してください。)</p>
 	<hr>
 	<h1>DoS/DDoS attack countermeasure page</h1>
 	<p>Continuous access is limited to prevent DoS/DDoS attacks.<br>
@@ -20,7 +20,7 @@
 	<p>This page is displayed when there is more than 35 accesses per minute or when you access this page directly.<br>
 	(Excluding images, CSS and JavaScript)</p>
 	<p>Q: What should I do?<br>
-	A: Please wait 30 seconds. If you accessed directly, please return to the <a href="/">home page</a> or access other pages. (Or quit your browser.)</p>
+	A: Please wait 30 seconds. If you accessed directly, please return to the <a href="ttps://nnn1590.orz.hm">home page</a> or access other pages. (Or quit your browser.)</p>
 	<hr>
-	<i><a href="/dosattackmeasures.html">dosattackmeasures.html</a> - 英訳は<a href="https://translate.google.co.jp/#view=home&op=translate&sl=ja&tl=en">Google 翻訳</a>によって翻訳されました。 | The English translation was translated by <a href="https://translate.google.co.jp/#view=home&op=translate&sl=ja&tl=en">Google Translate</a>.</i>
+	<i><a href="./dosattackmeasures.html">dosattackmeasures.html</a> - 英訳は<a href="https://translate.google.co.jp/#view=home&op=translate&sl=ja&tl=en">Google 翻訳</a>によって翻訳されました。 | The English translation was translated by <a href="https://translate.google.co.jp/#view=home&op=translate&sl=ja&tl=en">Google Translate</a>.</i>
 </body>
