--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<td>URL:<a href="http://nnn1590.orz.hm">http://nnn1590.orz.hm (DDNS)</a> | <a href="http://nnn1590.ml">http://nnn1590.ml</a></td>
 					</tr>
 					<tr>
-						<td>github.com/nnn1590</td>
+						<td>GitHub @nnn1590</td>
 						<td>GitHubのアカウント。変なことしてるかも</td>
 						<td>URL:<a href="https://github.com/nnn1590">https://github.com/nnn1590</a></td>
 					</tr>
