--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>INDEX | nnn1590.github.io</title>
 	</head>
-	<body background="images/wallpaper.jpg">
+	<body background="images/wallpaper.png">
 		<div align="center">
-			<div align="center"><img src="images/logo1_3.png" alt="ロゴ" width="256" height="64"></div>
+			<div align="center"><img src="images/logo2.png" alt="nnn1590.github.io ロゴ" width="256" height="64"></div>
 			<marquee><font color="#ff0000">Welcome!</font></marquee>
 			<table border="1px">
 				<tbody>
@@ -20,9 +20,9 @@
 						<td>URL:<a href="android-ui-utils/asset-studio/dist/">https://nnn1590.github.io/android-ui-utils/asset-studio/dist/</a></td>
 					</tr>
 					<tr>
-						<td>nnn1590.orz.hm(nnn1590.ml)</td>
+						<td>nnn1590.org(nnn1590.orz.hm)</td>
 						<td>メイン。たまに停止してるかも</td>
-						<td>URL:<a href="http://nnn1590.orz.hm">http://nnn1590.orz.hm (DDNS)</a> | <a href="http://nnn1590.ml">http://nnn1590.ml</a></td>
+						<td>URL:<a href="https://nnn1590.org">https://nnn1590.org</a> | <a href="https://nnn1590.orz.hm">https://nnn1590.orz.hm (DDNS)</a></td>
 					</tr>
 					<tr>
 						<td>GitHub @nnn1590</td>
