--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ja">
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>INDEX | nnn1590.github.io</title>
 	</head>
 	<body background="images/wallpaper.png">
@@ -8,21 +9,23 @@
 			<div align="center"><img src="images/logo2.png" alt="nnn1590.github.io ロゴ" width="256" height="64"></div>
 			<marquee><font color="#ff0000">Welcome!</font></marquee>
 			<table border="1px">
-				<tbody>
+				<thead>
 					<tr>
 						<th>名前</th>
 						<th>説明</th>
 						<th>その他</th>
 					</tr>
+				</thead>
+				<tbody>
 					<tr>
 						<td>Android Asset Studio</td>
 						<td>Holoの方。</td>
 						<td>URL:<a href="android-ui-utils/asset-studio/dist/">https://nnn1590.github.io/android-ui-utils/asset-studio/dist/</a></td>
 					</tr>
 					<tr>
-						<td>nnn1590.org(nnn1590.orz.hm)</td>
+						<td>nnn1590.org</td>
 						<td>メイン。たまに停止してるかも</td>
-						<td>URL:<a href="https://nnn1590.org">https://nnn1590.org</a> | <a href="https://nnn1590.orz.hm">https://nnn1590.orz.hm (DDNS)</a></td>
+						<td>URL:<a href="https://nnn1590.org">https://nnn1590.org</a></td>
 					</tr>
 					<tr>
 						<td>GitHub @nnn1590</td>
@@ -33,4 +36,4 @@
 			</table>
 		</div>
 	</body>
-</body>
+</html>
